# medical_robot

./: README.md
arduino_driver/: arduino_driver.ino
base_new_description/: CMakeLists.txt  package.xml
base_new_description/gazebo/: base_new_materials.gazebo  base_new_physics.gazebo  base_new_plugins.gazebo
base_new_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch  my_robot_description.launch
base_new_description/urdf/: base_new.xacro
ommp_description/launch/: description.launch
ommp_description/robots/: ommp_robot.xacro
ommp_description/urdf/base/: base.xacro
ommp_description/urdf/robots/ommp_real/: configuration.urdf.xacro
ommp_description/urdf/sensors/: lidar.xacro
ommp_description/urdf/wheel/: wheel.xacro
ommp_hw_interface/: CMakeLists.txt  package.xml
ommp_hw_interface/include/ommp_hw_interface/: hw_control_loop.h  hw_interface.h
ommp_hw_interface/nodes/: hw_interface_node.cpp
ommp_hw_interface/src/: hw_control_loop.cpp  hw_interface.cpp
robot_bringup/: CMakeLists.txt
robot_bringup/config/start/: my_laser_config.yaml  odom_encoder_params.yaml
robot_bringup/launch/: amcl.launch  filter.launch  gmapping.launch  move_base.launch  real_bringup.launch
robot_bringup/map/: correct_map.pgm  correct_map.yaml  custom_map.pgm  custom_map.yaml  map_filter.pgm  map_filter.yaml  map_j_2_1.pgm  map_j_2_1.yaml  map_j_7.pgm  map_j_7.yaml  map_j_7_l.pgm  map_j_7_l.yaml  map_low.pgm  map_low.yaml  map_whole.pgm  map_whole.yaml  map_whole1.pgm  map_whole1.yaml  mymap.pgm  mymap.yaml  roy_map.pgm  roy_map.yaml
robot_bringup/params/: base_local_planner_params.yaml  costmap_common_params.yaml  move_base_params.yaml
robot_bringup/params/map_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
robot_bringup/src/: cmd_vel_mux.cpp  differential.cpp  differential_drive_tf.cpp
