<?xml version="1.0"?>
<package format="2">
  <name>ommp_hw_interface</name>
  <version>0.1.0</version>
  <description>The agile_hw_interface package</description>

  <maintainer email="angelakis@lms.mech.upatras.gr">Panagiotis</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>boost</build_depend>
  
  <depend>roscpp</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>rosparam_shortcuts</depend>
  <depend>std_msgs</depend>

  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
  </export>
  
</package>
